--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         .category-label:hover { background-color: rgba(167, 139, 250, 0.3); }
         .pustaka-entry .efektif-title { color: #facc15; font-weight: 600;}
         .script-section .saran-shot {
-            background-color: rgba(167, 139, 250, 0.1);
-            color: #c4b5fd;
+            background-color: rgba(59, 130, 246, 0.2);
+            color: #93c5fd;
             padding: 2px 8px;
             border-radius: 9999px;
             font-size: 0.8rem;
@@ -207,7 +207,9 @@
             <div class="text-slate-300 mb-4">Lihat popularitas dan konten terkait untuk tag ini di platform berikut:</div>
             <div class="space-y-3">
                 <a id="instagram-link" href="#" target="_blank" class="flex items-center justify-center gap-3 w-full text-white font-bold py-3 px-4 rounded-lg bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 hover:opacity-90 transition-opacity">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16"><path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.282.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.843-.038 1.096-.047 3.232-.047h.001zm-1.843 2.822a4.102 4.102 0 1 0 0 8.204 4.102 4.102 0 0 0 0-8.204zm0 1.442a2.658 2.658 0 1 1 0 5.316 2.658 2.658 0 0 1 0-5.316zm4.958-1.442a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                        <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8s.01 2.444.048 3.297c.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 8 0zm0 1.442a6.556 6.556 0 0 1 3.25.045c.78.034 1.164.163 1.405.27.29.13.518.31.728.518.21.21.388.438.518.728.107.24.237.625.27 1.405.046.86.054 1.134.054 3.25s-.008 2.39-.054 3.25c-.033.78-.163 1.165-.27 1.405a2.47 2.47 0 0 1-.518.728c-.21.21-.438.388-.728.518-.24.107-.625.237-1.405.27-.86.046-1.134.054-3.25.054s-2.39-.008-3.25-.054c-.78-.033-1.165-.163-1.405-.27a2.47 2.47 0 0 1-.728-.518c-.21-.21-.388-.438-.518-.728-.107-.24-.237-.625-.27-1.405-.046-.86-.054-1.134-.054-3.25s.008-2.39.054-3.25c.033-.78.163-1.165.27-1.405a2.47 2.47 0 0 1 .518-.728c.21-.21.438-.388.728-.518.24-.107.625-.237 1.405-.27.86-.046 1.134-.054 3.25-.054zM8 4.868a3.132 3.132 0 1 0 0 6.264 3.132 3.132 0 0 0 0-6.264zm0 1.442a1.69 1.69 0 1 1 0 3.38 1.69 1.69 0 0 1 0-3.38zm4.39-1.442a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92z"/>
+                    </svg>
                     Lihat di Instagram
                 </a>
                 <a id="tiktok-link" href="#" target="_blank" class="flex items-center justify-center gap-3 w-full text-white font-bold py-3 px-4 rounded-lg bg-black border border-slate-600 hover:bg-slate-800 transition-colors">
@@ -489,9 +491,9 @@ Contoh struktur JSON yang diharapkan:
                     const item = data[key];
                     displayHTML = `<div class="pl-7">
                             <p class="text-sm text-slate-400 mb-2">🕒 Detik ${item.durasi || ''} (Estimasi: ${item.estimasi || '?'} detik)</p>
-                            <p class="text-slate-300"><strong class="text-slate-100/80 font-medium">VISUAL:</strong> ${item.visual || ''}</p>
-                            <p class="text-slate-300 mt-1"><strong class="text-slate-100/80 font-medium">NARASI:</strong> ${item.narasi || ''}</p>
-                            <p class="mt-2"><span class="saran-shot">Saran Shot: ${item.saran_shot || ''}</span></p>
+                            <p class="text-slate-300">📸 <strong class="text-slate-100/80 font-medium">VISUAL:</strong> ${item.visual || ''}</p>
+                            <p class="text-slate-300 mt-1">🎤 <strong class="text-slate-100/80 font-medium">NARASI:</strong> ${item.narasi || ''}</p>
+                            <p class="mt-2"><span class="saran-shot">🎬 Saran Shot: ${item.saran_shot || ''}</span></p>
                         </div>`;
                     editHTML = `<div class="space-y-2">
                             <label class="block text-xs text-slate-400">Visual</label><textarea class="w-full h-20 p-2 rounded-md edit-textarea" data-field="visual">${item.visual || ''}</textarea>
@@ -505,7 +507,12 @@ Contoh struktur JSON yang diharapkan:
                             <h3 class="text-lg font-bold text-slate-100 ${isAudioSection ? 'text-xl' : ''}">${sectionIcons[key]} ${sectionTitles[key]}</h3>
                             <div class="flex items-center gap-3">
                                 <button class="edit-section-btn p-1 text-slate-400 hover:text-white" title="Edit bagian ini"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16"><path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/><path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/></svg></button>
-                                <button class="copy-section-btn p-1 text-slate-400 hover:text-white" title="Salin bagian ini"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16"><path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/><path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3z"/></svg></button>
+                                <button class="copy-section-btn p-1 text-slate-400 hover:text-white" title="Salin bagian ini">
+                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-files" viewBox="0 0 16 16">
+                                        <path d="M13 0H6a2 2 0 0 0-2 2v1h1V2a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1h-2v1h2a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                                        <path d="M2 4a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2H2zm7 11H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v9a1 1 0 0 1-1 1z"/>
+                                    </svg>
+                                </button>
                             </div>
                         </div>
                         ${displayHTML}
@@ -608,17 +615,6 @@ Contoh struktur JSON yang diharapkan:
             }
         }
         
-        document.querySelectorAll('.modal-overlay').forEach(overlay => {
-            overlay.addEventListener('click', (e) => {
-                if (e.target === overlay) {
-                    if (overlay.id === 'loginModal' || (overlay.id === 'apiKeyModal' && !localStorage.getItem('userGeminiApiKey'))) {
-                        return; // Prevent closing login/initial API modal by clicking outside
-                    }
-                    overlay.classList.remove('visible');
-                }
-            });
-        });
-
         document.querySelectorAll('.close-modal-btn').forEach(btn => {
              btn.addEventListener('click', () => { btn.closest('.modal-overlay').classList.remove('visible'); });
         });
