--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             border-radius: 0.5rem;
         }
         .favorite-btn.favorited .star-icon { color: #facc15; }
-        .pustaka-entry .efektif-title { color: #facc15; font-weight: 600;}
+        .pustaka-entry .efektif-title, .faq-entry .efektif-title { color: #facc15; font-weight: 600;}
         .script-section .saran-shot-text { color: #60a5fa; font-weight: 600; }
         .hashtag {
             background-color: rgba(59, 130, 246, 0.2);
@@ -235,6 +235,34 @@
             <div id="pustaka-body" class="modal-body space-y-6 text-slate-300"></div>
         </div>
     </div>
+
+    <div id="faqModal" class="modal-overlay">
+        <div class="modal-content !max-w-2xl">
+            <div class="flex justify-between items-center mb-4"><h2 class="text-2xl font-bold text-purple-400">ℹ️ Tanya Jawab (FAQ)</h2><button class="close-modal-btn text-slate-400 hover:text-white text-3xl">&times;</button></div>
+            <div id="faq-body" class="modal-body space-y-6 text-slate-300">
+                <div class="faq-entry">
+                    <h3 class="font-bold text-lg text-slate-100">Apa itu API Key?</h3>
+                    <p class="mt-1">API Key adalah kode unik, mirip seperti password, yang memberikan Anda akses ke layanan AI dari Google. Anda membutuhkannya agar aplikasi ini bisa berfungsi.</p>
+                </div>
+                <div class="faq-entry">
+                    <h3 class="font-bold text-lg text-slate-100">Mengapa saya harus memasukkan API Key sendiri?</h3>
+                    <p class="mt-1">Aplikasi ini menggunakan model "Bring Your Own Key" (Bawa Kunci Sendiri). Artinya, Anda menggunakan kunci pribadi Anda untuk mengakses AI, sehingga developer tidak perlu menarik biaya langganan untuk menutupi biaya server. Anda punya kontrol penuh.</p>
+                </div>
+                <div class="faq-entry">
+                    <h3 class="font-bold text-lg text-slate-100">Apakah API Key saya aman?</h3>
+                    <p class="mt-1"><strong>Sangat aman.</strong> Kunci API Anda hanya disimpan di browser Anda (<code class="text-xs bg-slate-700 px-1 rounded">localStorage</code>) dan tidak pernah dikirim ke server kami. Kunci tersebut hanya digunakan untuk berkomunikasi langsung antara browser Anda dan Google AI.</p>
+                </div>
+                <div class="faq-entry">
+                    <h3 class="font-bold text-lg text-slate-100">Kapan kuota generate direset?</h3>
+                    <p class="mt-1">Kuota generate gratis Anda direset setiap hari pada pukul <strong class="efektif-title">00:00 (tengah malam)</strong> sesuai waktu lokal perangkat Anda.</p>
+                </div>
+                 <div class="faq-entry">
+                    <h3 class="font-bold text-lg text-slate-100">Mengapa ada kuota generate?</h3>
+                    <p class="mt-1">Kuota harian adalah fitur keamanan untuk melindungi Anda dari penggunaan berlebih yang tidak disengaja, yang mungkin bisa menimbulkan biaya dari Google. Ini membantu memastikan penggunaan API Key Anda tetap dalam batas wajar setiap harinya.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     
     <div id="scriptModal" class="modal-overlay">
         <div class="modal-content !max-w-2xl">
@@ -270,7 +298,10 @@
     <!-- Main App Container -->
     <div id="app-container" class="container mx-auto max-w-4xl p-4 md:p-8" style="display: none;">
         <header class="text-center mb-12 relative">
-            <button id="pustaka-hook-btn" title="Pustaka Hook" class="absolute top-0 right-0 p-2 text-slate-400 hover:text-purple-400 transition-colors"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-question-circle-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247zm2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"/></svg></button>
+            <div class="absolute top-0 right-0 flex items-center gap-2">
+                <button id="faq-btn" title="FAQ" class="p-2 text-slate-400 hover:text-purple-400 transition-colors"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16"><path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/></svg></button>
+                <button id="pustaka-hook-btn" title="Pustaka Hook" class="p-2 text-slate-400 hover:text-purple-400 transition-colors"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-question-circle-fill" viewBox="0 0 16 16"><path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286a.237.237 0 0 0 .241.247zm2.325 6.443c.61 0 1.029-.394 1.029-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94 0 .533.425.927 1.01.927z"/></svg></button>
+            </div>
             <h1 class="text-4xl md:text-6xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-blue-400">CONTENT CHEAT</h1>
             <p class="text-slate-500 mt-1 text-sm font-semibold">v68.0</p>
             <p class="text-slate-400 mt-2 text-lg">Buat Ide Kontenmu dengan Sekali Klik</p>
@@ -756,6 +787,7 @@ Contoh struktur JSON yang diharapkan:
 
         document.getElementById('howToGetApiKeyBtn').addEventListener('click', () => { document.getElementById('tutorialModal').classList.add('visible'); });
         document.getElementById('pustaka-hook-btn').addEventListener('click', () => { document.getElementById('pustakaHookModal').classList.add('visible'); });
+        document.getElementById('faq-btn').addEventListener('click', () => { document.getElementById('faqModal').classList.add('visible'); });
 
         document.getElementById('generateBtn').addEventListener('click', async () => {
             if (quotaManager.getQuotaData().quotaLeft <= 0) { showNotification('Maaf, kuota generate harian Anda sudah habis.', true); return; }
@@ -796,7 +828,7 @@ Contoh struktur JSON yang diharapkan:
             const scriptBtn = e.target.closest('.result-card-script-btn');
             const copyBtn = e.target.closest('.result-card-copy-btn');
             const favBtn = e.target.closest('.favorite-btn');
-            const categoryBtn = e.target.closest('.result-card-category');
+            const categoryBtn = e.target.closest('.text-sm.font-semibold');
 
             if(categoryBtn) { showHookExplanation(categoryBtn.dataset.category); }
             if(favBtn) { toggleFavorite({ hook: favBtn.dataset.hook, category: favBtn.dataset.category }); }
