--- a/index.html
+++ b/index.html
@@ -400,14 +400,17 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div><label for="topic" class="block text-sm font-medium text-slate-300 mb-2">1. Masukkan Produk / Jasa Anda <span class="text-red-400">(Wajib)</span></label><input type="text" id="topic" class="w-full rounded-lg p-3 modern-input" placeholder="Cth: Tripod, Serum Wajah"></div>
                 <div><label for="audience" class="block text-sm font-medium text-slate-300 mb-2">2. Siapa Target Audiens Anda? <span class="text-slate-400">(Opsional)</span></label><input type="text" id="audience" class="w-full rounded-lg p-3 modern-input" placeholder="Cth: Konten Kreator, Pebisnis Online"></div>
-                <div class="md:col-span-2"><label for="details" class="block text-sm font-medium text-slate-300 mb-2">3. Detail Tambahan (Opsional)</label><input type="text" id="details" class="w-full rounded-lg p-3 modern-input" placeholder="Cth: Merk, Harga, Manfaat Utama"></div>
+                <div>
+                    <label for="details" class="block text-sm font-medium text-slate-300 mb-2">3. Detail Tambahan (Opsional)</label>
+                    <input type="text" id="details" class="w-full rounded-lg p-3 modern-input" placeholder="Cth: Merk, Harga, Manfaat Utama">
+                </div>
                 <div>
                     <label for="hook-type" class="block text-sm font-medium text-slate-300 mb-2">4. Pilih Jenis Hasil (Opsional)</label>
                     <select id="hook-type" class="w-full rounded-lg p-3 modern-input">
                         <option value="semua">🔥 Tampilkan Semua (Direkomendasikan)</option><option value="Narasi">Narasi</option><option value="Pertanyaan">Pertanyaan</option><option value="Sebelum & Sesudah">Sebelum & Sesudah</option><option value="Social Proof">Social Proof</option><option value="Janji & Manfaat">Janji & Manfaat</option><option value="How-To">How-To</option><option value="Kontroversial">Kontroversial</option><option value="Negatif">Negatif</option><option value="FOMO">FOMO</option><option value="Penasaran">Penasaran</option><option value="Statistik">Statistik</option><option value="Kutipan">Kutipan</option><option value="Panggilan Langsung">Panggilan Langsung</option>
                     </select>
                 </div>
-                 <div class="md:col-span-2">
+                 <div>
                     <label for="tone-of-voice" class="block text-sm font-medium text-slate-300 mb-2">5. Pilih Gaya Bahasa (Opsional)</label>
                     <select id="tone-of-voice" class="w-full rounded-lg p-3 modern-input">
                         <option value="semua">✨ Tampilkan Semua (Direkomendasikan)</option>
